--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 ✅ Simple Command & global
 OK - Execute a simple command with an absolute path like /bin/ls or any other command without options
-1 (TERMCAP)- How many global variable ? why ? concrete example of why it feels mandatory or logical.
+OK - How many global variable ? why ? concrete example of why it feels mandatory or logical.
 V Yes
   No
 ✅ Arguments
@@ -13,12 +13,12 @@ OK - Execute the echo command with or without arguments or options
 OK - Repeat multiple times with different arguments
 V Yes
   No
-❌ exit
-- Execute exit command with or without arguments
-- Repeat multiple times with different arguments
-- Don't forget to relaunch the minishell
- Yes
- No
+✅ exit
+OK - Execute exit command with or without arguments
+OK - Repeat multiple times with different arguments
+OK - Don't forget to relaunch the minishell
+V Yes
+  No
 ❌ Return value of a process
 - Execute a simple command with absolute path like /bin/ls or any other command with arguments but without quotes and double quotes then execute echo $?
 - Check the printed value. You can repeat the same in bash and compare it.
@@ -43,28 +43,27 @@ OK - Try ctrl-D after running a blocking command like cat or grep without argume
 OK - Repeat multiple times with different commands
 V Yes
   No
-❌ Double Quotes
+✅ Double Quotes
 OK - Execute a simple command with absolute path with arguments but this time double quotes (you should include whitespaces and semicolons in the quotes)
-- Think about empty arguments or a weird use of '\'
-{ls\'}
+OK - Think about empty arguments or a weird use of '\'
 OK - Do not try multiline strings
- Yes
- No
+V Yes
+  No
 ✅ env
 OK - Check if env shows you the current environment variables
 V Yes
   No
-❌ export
-- Export environment variables, create new ones and replace old ones
-- Check them with env
- Yes
- No
-❌ unset
-- Export environment variables, create new ones and replace old ones
-- Use unset to remove some of them
-- Check the result with env
- Yes
- No
+✅ export
+OK - Export environment variables, create new ones and replace old ones
+OK - Check them with env
+V Yes
+  No
+✅ unset
+OK - Export environment variables, create new ones and replace old ones
+OK - Use unset to remove some of them
+OK - Check the result with env
+V Yes
+  No
 ✅ Environment Variables
 OK - Execute echo with some $ variables as arguments
 OK - Check if double quotes around $ variables is working correctly (like in bash)
@@ -104,10 +103,10 @@ V Yes
 - Check if multiple of the same redirections fail
  Yes
  No
-❌ Pipes
-- Execute commands with pipes like 'cat file | grep bla | more'
-- Repeat multiple times with different commands and arguments
-- Try some failing commands like 'ls filethatdoesntexist | grep bla | more'
+❌✅ Pipes
+OK - Execute commands with pipes like 'cat file | grep bla | more'
+OK - Repeat multiple times with different commands and arguments
+OK - Try some failing commands like 'ls filethatdoesntexist | grep bla | more'
 - Try to mix pipes and redirections.
  Yes
  No
